--- a/trunk/LaTeX/Klar - Anden gang rettelse/BinPackingProblem.tex
+++ b/trunk/LaTeX/Klar - Anden gang rettelse/BinPackingProblem.tex
@@ -2,7 +2,7 @@
 \label{sec:binpacking}
 
 %% Ret start %%
-The bin packing problem is a NP-hard problem when it is formulated as an optimization problem \citep{binpackinggsu}. This means that the problem is in it self, harder than those that can be solved by a nondeterministic Turing machine in polynomial time \citep{nphardnist}.
+The bin packing problem is an NP-hard problem when it is formulated as an optimization problem \citep{binpackinggsu}. This means that the problem is, in it self, harder than those that can be solved by a nondeterministic Turing machine in polynomial time \citep{nphardnist}.
 
 %%Ret end %%
 
@@ -44,6 +44,6 @@ It seems that it is more effective to sort the lists before attempting to pack o
 
 %% Ret start %%
 
-The main difference between the knapsack problem \fxfatal{knapsack section} and the bin packing problem, is that with the knapsack problem a list of items, each with a weight and a value, one must fit these into a fixed-size knapsack, so that the combined weight of the items are as low as possible, where the combined values must be as high as possible. In the bin packing problem, a list of items, each with given dimensions, each item must be packed into bins of a given capacity, so that a minimal number of bins are used. In this project we focus on the bin packing problem, because our goal is to pack items with given dimensions, into suitcases (bins), of a given size. In other words, each item does not have a specific value - each item must be packed, which is why we chose the bin packing problem over the knapsack problem. 
+The main difference between the knapsack problem \fxfatal{knapsack section} and the bin packing problem, is that with the knapsack problem a list of items, each with a weight and a value, one must fit these into a fixed-size knapsack, so that the combined weight of the items are as low as possible, where the combined values must be as high as possible. In the bin packing problem, a list of items, each with given dimensions, each item must be packed into bins of a given capacity, so that a minimal number of bins are used. In this project we focus on the bin packing problem, because our goal is to pack items with given dimensions into suitcases (bins) of a given size. In other words, each item does not have a specific value - each item must be packed, which is why we chose the bin packing problem over the knapsack problem. 
 
 %%Ret end %%
