--- a/trunk/LaTeX/Skal sættes i rapport/Discussion.tex
+++ b/trunk/LaTeX/Skal sættes i rapport/Discussion.tex
@@ -1,5 +1,5 @@
 \section{Discussion}
-The focus in this discussion is to see if the product is in conjunction with the problem analysis \fxfatal{ref til problem analysis} and to see if the different requirements \fxfatal{ref til specification requirements} is integrated in the product.
+The focus in this discussion is to see if the product is in conjunction with the problem analysis seen on Chapter \ref{chap:problem} and to see if the different requirements \fxfatal{ref til specification requirements} is integrated in the product.
 
 In the problem analysis there was stated the following requirements for the program:
 
@@ -34,6 +34,6 @@ The user are able to save a list he/she has made on the computer and load saved 
 
 So the program is based on the requirements and has been improved by using the results of the tests that have been made on the program. The tests have helped with improving the design of the program and a few function in the program. This has been a very good tool in improving and bug-testing the program. The improvement made after the tests can be seen in chapter \ref{chap:testing}.
 
-So the product includes all the important requirement but the optional features have not been included because of the lack of time to work on these optional features. The program is capable of packing one or more bags based on data on the bags and a list of items that should be packed. But the program unfortunately does not provide a packing solution as the human brain can. The reason for this is that the program does not allow object to be flexible. On the other hand the program takes weight into account which can be hard to remember when packing. The program does also remember items from last time which can save time for the user because he/she does not need to start from scratch.
+So the product includes all the important requirement but the optional features have not been included because of the lack of time to work on these optional features. It was decided that it was more important to make the targeted features as perfect as possible, before working on optional features. The program is capable of packing one or more bags based on data on the bags and a list of items that should be packed. But the program unfortunately does not provide a packing solution as the human brain can. The reason for this is that the program does not allow object to be flexible. On the other hand the program takes weight into account which can be hard to remember when packing. The program does also remember items from last time which can save time for the user because he/she does not need to start from scratch.
 
 In the following section, Perspectivation, the experience will be reflected upon and try to related processes in the project to the real world outside the project. There will also be thoughts on how user will use the program.
