--- a/trunk/LaTeX/Klar - Anden gang rettelse/programplanning.tex
+++ b/trunk/LaTeX/Klar - Anden gang rettelse/programplanning.tex
@@ -10,14 +10,14 @@ The program then performs the algorithms to place the items in the most efficien
 When the program successfully place an item, the item will be marked as packed. If the program can not fit the item in any of the accessible suitcases the item will be marked as not packable. If the program reach the point where all items have gone through the process, it should then inform the user that the process is done and inform how the user have to pack the suitcases and report if there were any items that could not be packed.
 At the end of the program the user will be able to see a 3D-view of the suitcase and be able to select which suitcase to show. The user will be able to zoom, rotate and drag the suitcase. A list will show all the items in the suitcase and if selected, they will be marked in the suitcase.
 
-\figur{0.9}{flowchart.JPG}{This is the flowchart of the program (not quiet finished yet)}{fig:flow}
+\figur{0.9}{FlowOfProgram.jpg}{This is the flowchart of the program (not quiet finished yet)}{fig:flow}
 \fxfatal{Finish the flowchart!}
 
 Hereby the general structure of the program has been formed and can be described by a flowchart, seen on figure \ref{fig:flow}.
 The arrows shows the direction of the flow in the program. Some of the arrows also have small labels indicating which answers there were to the decisions.
 This flowchart can then be used as a schematic for the developing of the program and thereby a better structure of the program can be achieved.
 %%%%%%%%%%%%ret fra her%%%%%%%%%%%%
-There have been made pseudo code from the flowchart on Figure \ref{fig:flow}, which is one of the last steps before actually writing the program. This will give a bit more code structures view of the events in the flowchart. The pseudo code can be seen on Figure \ref{fig:pseudocode}
+There has been made pseudo code from the flowchart on Figure \ref{fig:flow}, which is one of the last steps before actually writing the program. This will give a more structured view of the events in the flowchart. The pseudo code can be seen on Figure \ref{fig:pseudocode}
 
 \begin{figure}[H] \centering
 			
