--- a/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
@@ -58,6 +58,7 @@
 \label{chap:design}
 \input{indhold/design/Introductiondesign.tex}
 \input{indhold/design/Specificationrequirement.tex}
+\input{indhold/design/partneranalysis.tex}
 \input{indhold/design/Solutionsuggestions.tex}
 \input{indhold/design/programplanning.tex}
 \input{indhold/design/GUIdescription.tex}
